--- a/README
+++ b/README
@@ -3,3 +3,4 @@ formula
 pilota: nome cognome eta idpilota 
 
 commit: iniziato progetto,istanziato prime classi e metodi 
+commit:creato menu, refactoring classe pilota,app
