--- a/README
+++ b/README
@@ -3,4 +3,4 @@ formula
 pilota: nome cognome eta idpilota 
 
 commit: iniziato progetto,istanziato prime classi e metodi 
-commit:creato menu, refactoring classe pilota,app
+commit:creato menu, refactoring classe pilota,app// adesso commit sul programma
